--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,16 @@
             <version>1.0.5</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+
+
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
